--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,10 @@
 </head>
 <body id="page-body">
     
+    <canvas id="backgroundCanvas"></canvas>
+
     <header class="fixed-header" id="fixed-header">
-        <span class="header-logo">MINNU</span>
+        <span class="header-logo" id="header-logo-button" style="cursor: pointer;">MINNU</span>
         <button class="close-button" id="close-button">X</button>
     </header>
 
@@ -132,7 +134,7 @@
         </div>
     </section>
 
-
     <script src="app.js"></script>
+    <script src="particle_background.js"></script>
 </body>
 </html>
