--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,6 +134,15 @@
             </div>
         </div>
     </section>
+    
+    <div id="alarm-modal-overlay" class="modal-overlay">
+        <div id="alarm-modal" class="modal-content">
+            <h2>Tempo Esgotado!</h2>
+            <p>Seu tempo de pausa acabou.</p>
+            <button id="alarm-ok-button" class="btn-primary">OK</button>
+        </div>
+    </div>
+    <audio id="alarm-sound" src="audio/alarm-kalimba.m4a" loop preload="auto"></audio>
 
     <script src="app.js"></script>
     <script src="particle_background.js"></script>
